--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,153 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  box-sizing: border-box;
+  font-family: "Lucida Sans", sans-serif;
+}
+
+body {
+  margin: 0 auto;
+  background-color: #e0e0e0;
+}
+.container {
+  width: 100%;
+}
+.header {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  padding: 10px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 10px;
+}
+
+.card {
+  font-size: 13px;
+  padding: 5px;
+  margin: 2px;
+  background-color: white;
+  border-radius: 5px;
+  .header {
+    font-size: 14px;
+    color: blue;
+  }
+  .img-responsive {
+    width: 100%;
+    background-color: #f1f0f0;
+  }
+}
+.no-data {
+  font-size: 20px;
+  color: red;
+  text-align: center;
+}
+.tag {
+  background-color: yellowgreen;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 3px 3px 3px 3px;
+  cursor: pointer;
+}
+.active {
+  background-color: green;
+  color: white;
+}
+
+footer {
+  margin: auto;
+  text-align: center;
+  font-weight: bold;
+}
+
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 1024px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 23%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 1024px) {
+  /* For tablet */
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 45%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 75%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
